--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,27 @@
+header{
+  margin-left: 25%;
+  margin-right: auto;
+}
+
 header div {
   display: inline-block;
   margin-top: 7px;
 
+}
+
+
+h1 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 50px;
+  margin-top: 2em;
+  margin-bottom: 0%;
+
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  
 }
 
 h3 {
@@ -33,6 +53,7 @@ header li {
 #hash {
   background-image: url(/img/hr-img.png);
   background-repeat: repeat-x, ;
+  margin-left: 25%;
   
   height: 15px;
 }
@@ -60,7 +81,75 @@ header li {
   background-image: url(/img/list-bg.png);
 }
 
+#post li {
+  display: inline-block;
+  font-family: 'Montserrat', sans-serif;
+  margin-left: auto ;
+  margin-right: auto;
+}
+
+main{
+  margin-left: 25%;
+  margin-right: ;
+
+}
+
+main p {
+  text-indent: 25px;
+  font-size: 15px;
+  width: 900px;
+  color: gray;
+}
+main li {
+  color: gray;
+}
+
 #overlay {
+  font-family: 'Fuzzy Bubbles', cursive;
+  color: #555;
+  list-style: none;
   background-image: url(/img/list-bg.png);
   background-repeat: no-repeat ;
+  height: 50%;
+  padding: 10px;
+  display: flex;
+  
 }
+
+#column1 {
+  flex: 1;
+  border: 2px solid yellow;
+}
+
+#column2 {
+ margin-left: 3em;
+ width: 50%;
+}
+
+
+button {
+  margin-left: 30px;
+  background-color: rgba(177, 103, 76, 0.948);
+  display: inline-block;
+  color: white;
+  padding: 10px 30px;
+  margin-top: 5px;
+  
+}
+button:hover {
+  background-color: #aaa;
+  transition: 350ms;
+  color: black;
+  border-radius: 8px;
+}
+h5 {
+  font-size: 20px;
+}
+
+footer {
+  color: gray;
+  text-align: center;
+}
+ footer img {
+   display: inline;
+ }
